--- a/PreworkLab/Lab_Duel-Of-Sorcerers.ipynb
+++ b/PreworkLab/Lab_Duel-Of-Sorcerers.ipynb
@@ -49,10 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "spells = len(gandalf) # It is assumed the spells list has the same length for both Sorcerers\n",
+    "\n",
+    "print(spells)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +96,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solved using a for loop\n",
+    "\n",
+    "for i in range(spells):\n",
+    "    \n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        \n",
+    "        gandalf_wins += 1\n",
+    "        \n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        \n",
+    "        saruman_wins += 1\n",
+    "        \n",
+    "print(gandalf_wins)\n",
+    "print(saruman_wins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['S', 'S', 'G', 'S', 'G', 'G', 'S', 'G', 'G', 'G']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solved using a list comprehension\n",
+    "\n",
+    "clash = [\"G\" if gandalf[i] > saruman[i] else \"S\" if gandalf[i] < saruman[i] else \"T\" for i in range(spells)]\n",
+    "\n",
+    "print(clash)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +156,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for the for loop solution\n",
+    "\n",
+    "if gandalf_wins > saruman_wins:\n",
+    "    \n",
+    "    print(\"Gandalf Wins!\")\n",
+    "    \n",
+    "elif gandalf_wins < saruman_wins:\n",
+    "    \n",
+    "    print(\"Saruman Wins!\")\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    print(\"It is a tie!\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for the for list comprehension solution\n",
+    "\n",
+    "if clash.count(\"G\") > clash.count(\"S\"):\n",
+    "    \n",
+    "    print(\"Gandalf Wins!\")\n",
+    "    \n",
+    "elif clash.count(\"G\") < clash.count(\"S\"):\n",
+    "    \n",
+    "    print(\"Saruman Wins!\")\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    print(\"It is a tie!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "spells = len(gandalf) # It is assumed the spells list has the same length for both Sorcerers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +289,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solved with for loop\n",
+    "\n",
+    "gandalf_power = []\n",
+    "saruman_power = []\n",
+    "\n",
+    "for i in range(spells):\n",
+    "    \n",
+    "    gandalf_power.append(POWER[gandalf[i]])\n",
+    "    saruman_power.append(POWER[saruman[i]])\n",
+    "    \n",
+    "print(gandalf_power)\n",
+    "print(saruman_power)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solved with list comprehension\n",
+    "\n",
+    "gandalf_power = [POWER[gandalf[i]] for i in range(spells)]\n",
+    "saruman_power = [POWER[saruman[i]] for i in range(spells)]\n",
+    "\n",
+    "print(gandalf_power)\n",
+    "print(saruman_power)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +350,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins!\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf_counter = 1\n",
+    "saruman_counter = 1\n",
+    "Flag = \"\"\n",
+    "\n",
+    "for i in range(spells):\n",
+    "    \n",
+    "    if Flag == \"G\":\n",
+    "        \n",
+    "        if gandalf_power[i] > saruman_power[i]:\n",
+    "            \n",
+    "            gandalf_counter += 1\n",
+    "            \n",
+    "            if gandalf_counter == 3:\n",
+    "                \n",
+    "                print(\"Gandalf Wins!\")\n",
+    "                break\n",
+    "        \n",
+    "        if gandalf_power[i] < saruman_power[i]:\n",
+    "             \n",
+    "            Flag == \"S\"\n",
+    "            gandalf_counter = 0\n",
+    "        \n",
+    "    elif Flag == \"S\":\n",
+    "        \n",
+    "        if gandalf_power[i] < saruman_power[i]:\n",
+    "            \n",
+    "            saruman_counter += 1\n",
+    "            \n",
+    "            if saruman_counter == 3:\n",
+    "                \n",
+    "                print(\"Saruman Wins!\") \n",
+    "                break\n",
+    "        \n",
+    "        if gandalf_power[i] > saruman_power[i]:\n",
+    "             \n",
+    "            Flag = \"G\"        \n",
+    "            saruman_counter = 0\n",
+    "    else:\n",
+    "        \n",
+    "        if gandalf_power[i] > saruman_power[i]:\n",
+    "            \n",
+    "            Flag = \"G\"\n",
+    "        \n",
+    "        if gandalf_power[i] < saruman_power[i]:        \n",
+    "        \n",
+    "            Flag = \"S\"\n",
+    "            \n",
+    "    \n",
+    "    if i == spells - 1:\n",
+    "    \n",
+    "        print(\"It is a tie!\")       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +446,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
