--- a/PreworkLab/Lab_rock-paper-scissors.ipynb
+++ b/PreworkLab/Lab_rock-paper-scissors.ipynb
@@ -32,16 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "random.seed(0)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 2. Create a list that includes the 3 possible gesture options of the game: 'rock', 'paper' or 'scissors'. Store the list in a variable called `gestures`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gestures = [\"rock\", \"paper\", \"scissors\"]"
    ]
   },
   {
@@ -61,10 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_rounds = 5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds_to_win = int(n_rounds/2) + 1\n",
+    "print(rounds_to_win)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +133,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpu_move(gestures):\n",
+    "    \"\"\"\n",
+    "    Inputs: a list of legal gestures. Type = List\n",
+    "    \n",
+    "    Returns: a gesture randomly chosen from gestures. Type = string\n",
+    "    \"\"\"\n",
+    "    return random.choice(gestures)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rock'"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cpu_move function test\n",
+    "\n",
+    "cpu_move(gestures)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +190,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def player_move(gestures):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Inputs: a list of legal gestures. Type = List\n",
+    "    \n",
+    "    Returns: the player selected gesture, if legal. If the chosen gesture is not legal the function will keep asking until the condition is met. Type = string\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    move = \"\"\n",
+    "    Flag = False\n",
+    "\n",
+    "    while move not in gestures:\n",
+    "        \n",
+    "        if Flag == True:\n",
+    "            print(\"Sorry that move is not legal in Rock-Paper-Scissors. Try one of the legal options.\")\n",
+    "        \n",
+    "        move = input(\"Please choose your move:\").lower()\n",
+    "        Flag = True\n",
+    "        \n",
+    "    return move\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please choose your move:lizard\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'lizard'"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# player_move function test\n",
+    "\n",
+    "player_move(gestures)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +260,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def winner(cpu_gesture, player_gesture):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Inputs: player and cpu gestures. Type = strings\n",
+    "    Output: winner of the round (2 = Player / 1 = CPU / 0 = Tie). Type = int\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if player_gesture == \"paper\":\n",
+    "        \n",
+    "        if cpu_gesture == \"rock\":\n",
+    "            \n",
+    "            return 2\n",
+    "        \n",
+    "        elif cpu_gesture == \"scissors\":\n",
+    "            \n",
+    "            return 1\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            return 0\n",
+    "        \n",
+    "    if player_gesture == \"rock\":\n",
+    "        \n",
+    "        if cpu_gesture == \"scissors\":\n",
+    "            \n",
+    "            return 2\n",
+    "        \n",
+    "        elif cpu_gesture == \"paper\":\n",
+    "            \n",
+    "            return 1\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            return 0\n",
+    "        \n",
+    "    if player_gesture == \"scissors\":\n",
+    "        \n",
+    "        if cpu_gesture == \"paper\":\n",
+    "            \n",
+    "            return 2\n",
+    "        \n",
+    "        elif cpu_gesture == \"rock\":\n",
+    "            \n",
+    "            return 1\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second version of winner(), with a dict containing the rules as input\n",
+    "\n",
+    "rules_3moves = {\n",
+    "    \"rock\":{\"scissors\":\"Wins\", \"paper\":\"Loses\"}, \n",
+    "    \"paper\":{\"rock\":\"Wins\", \"scissors\":\"Loses\"}, \n",
+    "    \"scissors\":{\"rock\":\"Loses\", \"paper\":\"Wins\"}\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "def winner(cpu_gesture, player_gesture, rules):\n",
+    "    \n",
+    "    if cpu_gesture == player_gesture:\n",
+    "        \n",
+    "        return 0    \n",
+    "    \n",
+    "    elif rules[player_gesture][cpu_gesture] == \"Wins\":\n",
+    "        \n",
+    "        return 2\n",
+    "    \n",
+    "    elif rules[player_gesture][cpu_gesture] == \"Loses\":\n",
+    "        \n",
+    "        return 1\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# winner function test\n",
+    "\n",
+    "winner(\"paper\", \"rock\", rules)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,7 +370,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def printer(cpu_gesture, player_gesture, winner, cpu_score, player_score):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    print(f'The gesture of the CPU is: {cpu_gesture}')\n",
+    "    print(f'The gesture of the Player is: {player_gesture}')\n",
+    "    \n",
+    "    if winner == 1:\n",
+    "        \n",
+    "        winner = \"CPU\"\n",
+    "        cpu_score += 1\n",
+    "        \n",
+    "    elif winner == 2:\n",
+    "        \n",
+    "        winner = \"Player\"\n",
+    "        player_score += 1        \n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(\"The round is a tie.\")\n",
+    "\n",
+    "    if winner != 0:\n",
+    "        \n",
+    "        print(f'The {winner} is the winner of this round.')\n",
+    "        \n",
+    "    print(f'The overall result of the current game is: Player Wins = {player_score} / CPU Wins = {cpu_score}')\n",
+    "    \n",
+    "    return player_score, cpu_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printer(\"paper\", \"rock\", 0, 0, 0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +427,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rounds():\n",
+    "    \n",
+    "    rounds = 0\n",
+    "    Flag = False\n",
+    "\n",
+    "    while (rounds % 2) == 0:\n",
+    "        \n",
+    "        if Flag == True:\n",
+    "            print(\"Sorry, Ties are boring. The number of rounds should be an odd number. Please try again.\")\n",
+    "        \n",
+    "        rounds = int(input(\"Please insert the number of rounds you wanna play: \"))\n",
+    "        Flag = True\n",
+    "        \n",
+    "    return rounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_a_game(rules):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    n_wins = 0\n",
+    "    cpu_score = 0\n",
+    "    player_score = 0\n",
+    "    n_rounds = rounds()\n",
+    "    rounds_to_win = int(n_rounds/2) + 1\n",
+    "    \n",
+    "    while n_wins < rounds_to_win:\n",
+    "        \n",
+    "        player_gesture = player_move(gestures)\n",
+    "        cpu_gesture = cpu_move(gestures)\n",
+    "        round_winner = winner(cpu_gesture, player_gesture, rules)\n",
+    "        player_score, cpu_score = printer(cpu_gesture, player_gesture, round_winner, cpu_score, player_score)\n",
+    "        n_wins = max(player_score, cpu_score)\n",
+    "        \n",
+    "    if player_score > cpu_score:\n",
+    "        \n",
+    "        print(\"The Player won the game! Well Done!\")\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(\"The CPU won the game! Better Luck Next Time!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# play_a_game function test\n",
+    "\n",
+    "play_a_game(rules)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +501,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# See function play_a_game() in previous exercise"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,6 +521,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to define a new set of rules and gestures\n",
+    "\n",
+    "rules_5moves = {\n",
+    "    \"rock\":{\"scissors\":\"Wins\", \"paper\":\"Loses\", \"lizard\":\"Wins\", \"spock\":\"Loses\"}, \n",
+    "    \"paper\":{\"rock\":\"Wins\", \"scissors\":\"Loses\", \"lizard\":\"Loses\", \"spock\":\"Wins\"}, \n",
+    "    \"scissors\":{\"rock\":\"Loses\", \"paper\":\"Wins\", \"lizard\":\"Wins\", \"spock\":\"Loses\"},\n",
+    "    \"spock\":{\"rock\":\"Wins\", \"paper\":\"Loses\", \"scissors\":\"Wins\", \"lizard\":\"Loses\"},\n",
+    "    \"lizard\":{\"rock\":\"Loses\", \"paper\":\"Wins\", \"scissors\":\"Loses\", \"spock\":\"Wins\"},\n",
+    "        }\n",
+    "\n",
+    "gestures = [\"rock\", \"paper\", \"scissors\", \"lizard\", \"spock\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please insert the number of rounds you wanna play: 3\n",
+      "Please choose your move:lizard\n",
+      "The gesture of the CPU is: lizard\n",
+      "The gesture of the Player is: lizard\n",
+      "The round is a tie.\n",
+      "The overall result of the current game is: Player Wins = 0 / CPU Wins = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "play_a_game(rules_5moves)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -212,7 +570,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
