--- a/PandasLab/101_Pandas_Exercises.ipynb
+++ b/PandasLab/101_Pandas_Exercises.ipynb
@@ -715,16 +715,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0],\n",
+       "       [6]], dtype=int64)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "res = ser[ser % 3 == 0]"
+    "\n",
+    "np.argwhere(ser.to_numpy() % 3==0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +753,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,23 +940,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'RangeIndex' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21832/799271796.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mser1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'RangeIndex' object is not callable"
+     "data": {
+      "text/plain": [
+       "[(array([5], dtype=int64),),\n",
+       " (array([4], dtype=int64),),\n",
+       " (array([0], dtype=int64),),\n",
+       " (array([8], dtype=int64),)]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[np.where(i == ser1) for i in ser2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 0, 8]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[np.where(i == ser1)[0][0] for i in ser2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 17. How to compute the mean squared error on a truth and predicted series?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth = pd.Series(range(10))\n",
+    "pred = pd.Series(range(10)) + np.random.random(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msr = np.mean((truth - pred)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47595345575455045"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 18. How to convert the first character of each element in a series to uppercase?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series(['how', 'to', 'kick', 'ass?'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     How\n",
+       "1      To\n",
+       "2    Kick\n",
+       "3    Ass?\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser1 = pd.Series([w.capitalize() for w in ser])\n",
+    "\n",
+    "ser1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     How\n",
+       "1      To\n",
+       "2    Kick\n",
+       "3    Ass?\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.map(lambda x:x.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 19. How to calculate the number of characters in each word in a series?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series(['how', 'to', 'kick', 'ass?'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3\n",
+       "1    2\n",
+       "2    4\n",
+       "3    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.map(lambda x:len(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 20. How to compute difference of differences between consequtive numbers of a series?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series([1, 3, 6, 10, 15, 21, 27, 35])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan, 2.0, 3.0, 4.0, 5.0, 6.0, 6.0, 8.0]\n"
      ]
     }
    ],
    "source": [
-    "ser1.index(9)"
+    "print(ser.diff().tolist())"
    ]
   },
   {
